--- a/DarkAccess/Front-End/public/index.html
+++ b/DarkAccess/Front-End/public/index.html
@@ -14,5 +14,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Google Identity Services (modern) -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
 </html>
